@@ -2,12 +2,9 @@ dnl
 dnl autoconf input file for ``GNU grep''
 dnl
 dnl Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
-dnl 2005, 2006, 2009 the Free Software Foundation, Inc.
+dnl 2005, 2006, 2009 Free Software Foundation, Inc.
 dnl
 dnl This file is part of GNU grep.
-dnl
-dnl Copyright 1997, 1998, 2005, 2006, 2007, 2008, 2009 Free Software
-dnl Foundation, Inc.
 dnl
 dnl This program is free software; you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -21,12 +18,6 @@ dnl GNU General Public License for more details.
 dnl
 dnl You should have received a copy of the GNU General Public License
 dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.
-dnl
-dnl Authors:
-dnl Alain Magloire <alainm@gnu.org>
-dnl Bernhard Rosenkraenzer <bero@arklinux.org>
-dnl Stepan Kasal <kasal@gnu.org>
-dnl
 
 AC_INIT(GNU grep, 2.5.4-cvs, bug-grep@gnu.org, grep)
 AC_CONFIG_SRCDIR(src/grep.c)
@@ -99,7 +90,7 @@ esac
 
 dnl I18N feature
 ALL_LINGUAS="@ALL_LINGUAS@"
-AM_GNU_GETTEXT
+AM_GNU_GETTEXT[external]
 
 dnl DOS file name convention
 dnl sets HAVE_DOS_FILE_NAMES
