@@ -1,5 +1,8 @@
 2009-02-01  Karl Berry  <karl@tug.org>
 
+	* configure.ac.in (AM_GNU_GETTEXT): specify [external], since
+	that's recommended (and we don't include gettext in the package).
+
 	* missing: re-add (from gnulib), since it's missing.
 
 	* src/grep.c (usage): consistent punctuation.
